Remove unused styles and finish first saint

--- a/index.css
+++ b/index.css
@@ -57,6 +57,11 @@ a {
     margin-top: 10px;
 }
 
+.feedback-btn {
+    display: flex;
+    justify-content: center;
+}
+
 /* RESPONSIVENESS */
 @media (max-width: 1017px) {
     .title {
