--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -13,6 +13,11 @@ body {
 
 a {
   text-decoration: none;
+  color: #0000ee;
+}
+
+a:hover {
+  color: #551a8b;
 }
 
 /* SCROLLBAR CODE TAKEN FROM W3SCHOOLS */
