--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
       href="{{ url_for('static', filename='css/index.css') }}"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -96,91 +100,133 @@
     <title>Saints for Us</title>
   </head>
   <body>
-    <h1 class="title">Saints for Us</h1>
-    <div class="quote">
-      <h1>"Your word is a lamp to guide my feet and a light for my path."</h1>
-      <h1 class="align-right">-Psalm 119:105</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">Saints for Us</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/feedback">Feedback</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://aidantomcy.github.io"
+                >About the Creator</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container-fluid">
+      <h1 class="title pt-4">Saints for Us</h1>
+      <div class="quote">
+        <h1>"Your word is a lamp to guide my feet and a light for my path."</h1>
+        <h1 class="align-right">-Psalm 119:105</h1>
+      </div>
+      <div class="images-right">
+        <img
+          src="{{ url_for('static', filename='img/jesus-christ-home-image.jpeg') }}"
+          alt=""
+          class="img-1"
+        />
+        <img
+          src="{{ url_for('static', filename='img/jesus-christ-home-image2.jpeg') }}"
+          alt=""
+          class="img-2"
+        />
+      </div>
+      <div class="links">
+        <h2>
+          <a href="stanthony.html">St. Anthony of Padua</a>
+        </h2>
+        <h2>
+          <a href="stfrancisassisi.html">St. Francis of Assisi</a>
+        </h2>
+        <h2>
+          <a href="staidanlindisfarne.html">St. Aidan of Lindisfarne</a>
+        </h2>
+        <h2><a href="stfrancisxavier.html">St. Francis Xavier</a></h2>
+        <h2>
+          <a href="blessedcarloacutis.html">Blessed Carlo Acutis</a>
+        </h2>
+        <h2><a href="stagnes.html">St. Agnes</a></h2>
+        <h2>
+          <a href="stkuriakose.html">St. Kuriakose Elias Chavara</a>
+        </h2>
+        <h2><a href="stjoan.html">St. Joan of Arc</a></h2>
+        <h2><a href="stpeter.html">St. Peter</a></h2>
+        <h2><a href="stbernadette.html">St. Bernadette</a></h2>
+        <h2>
+          <a href="stjohnbaptist.html">St. John the Baptist</a>
+        </h2>
+        <h2><a href="mothermary.html">Mother Mary</a></h2>
+        <h2><a href="stjoseph.html">St. Joseph</a></h2>
+        <h2><a href="motherteresa.html">Mother Teresa</a></h2>
+        <h2><a href="stthomas.html">St. Thomas</a></h2>
+        <h2><a href="stsebastian.html">St. Sebastian</a></h2>
+        <h2><a href="stjohnpaulii.html">St. John Paul II</a></h2>
+        <h2>
+          <a href="stclareassisi.html">St. Clare of Assisi</a>
+        </h2>
+        <h2><a href="stgeorge.html">St. George</a></h2>
+        <h2><a href="stpaul.html">St. Paul</a></h2>
+        <h2><a href="stvianney.html">St. Vianney</a></h2>
+        <h2><a href="stphilipneri.html">St. Philip Neri</a></h2>
+        <h2><a href="stphilip.html">St. Philip</a></h2>
+        <h2><a href="stjohnxxiii.html">St. John XXIII</a></h2>
+        <h2>
+          <a href="sttherese.html">St. Therese of Liseux</a>
+        </h2>
+        <h2><a href="stnicholas.html">St. Nicholas</a></h2>
+        <h2>
+          <a href="stfrancisdesales.html">St. Francis de Sales</a>
+        </h2>
+      </div>
+      <div class="contact-info">
+        <p>
+          <br />
+          Made by-<a href="https://aidantomcy.github.io"
+            >Aidan Tomcy Champannoor</a
+          ><br />
+          If you have any doubts/complaints/feedback, please mail your queries
+          to
+          <a href="mailto:info.saintsforus@gmail.com"
+            >info.saintsforus@gmail.com</a
+          >/<a href="mailto:aidantomcy@gmail.com">aidantomcy@gmail.com</a>
+          <br />
+          <a href="/feedback">Submit Feedback</a><br />
+          Source-<a href="https://www.wikipedia.org/">Wikipedia</a>
+        </p>
+      </div>
     </div>
 
-    <div class="images-right">
-      <img
-        src="{{ url_for('static', filename='img/jesus-christ-home-image.jpeg') }}"
-        alt=""
-        class="img-1"
-      />
-      <img
-        src="{{ url_for('static', filename='img/jesus-christ-home-image2.jpeg') }}"
-        alt=""
-        class="img-2"
-      />
-    </div>
-
-    <div class="links">
-      <h2>
-        <a href="stanthony.html">St. Anthony of Padua</a>
-      </h2>
-      <h2>
-        <a href="stfrancisassisi.html">St. Francis of Assisi</a>
-      </h2>
-      <h2>
-        <a href="staidanlindisfarne.html">St. Aidan of Lindisfarne</a>
-      </h2>
-      <h2><a href="stfrancisxavier.html">St. Francis Xavier</a></h2>
-      <h2>
-        <a href="blessedcarloacutis.html">Blessed Carlo Acutis</a>
-      </h2>
-      <h2><a href="stagnes.html">St. Agnes</a></h2>
-      <h2>
-        <a href="stkuriakose.html">St. Kuriakose Elias Chavara</a>
-      </h2>
-      <h2><a href="stjoan.html">St. Joan of Arc</a></h2>
-      <h2><a href="stpeter.html">St. Peter</a></h2>
-      <h2><a href="stbernadette.html">St. Bernadette</a></h2>
-      <h2>
-        <a href="stjohnbaptist.html">St. John the Baptist</a>
-      </h2>
-      <h2><a href="mothermary.html">Mother Mary</a></h2>
-      <h2><a href="stjoseph.html">St. Joseph</a></h2>
-      <h2><a href="motherteresa.html">Mother Teresa</a></h2>
-      <h2><a href="stthomas.html">St. Thomas</a></h2>
-      <h2><a href="stsebastian.html">St. Sebastian</a></h2>
-      <h2><a href="stjohnpaulii.html">St. John Paul II</a></h2>
-      <h2>
-        <a href="stclareassisi.html">St. Clare of Assisi</a>
-      </h2>
-      <h2><a href="stgeorge.html">St. George</a></h2>
-      <h2><a href="stpaul.html">St. Paul</a></h2>
-      <h2><a href="stvianney.html">St. Vianney</a></h2>
-      <h2><a href="stphilipneri.html">St. Philip Neri</a></h2>
-      <h2><a href="stphilip.html">St. Philip</a></h2>
-      <h2><a href="stjohnxxiii.html">St. John XXIII</a></h2>
-      <h2>
-        <a href="sttherese.html">St. Therese of Liseux</a>
-      </h2>
-      <h2><a href="stnicholas.html">St. Nicholas</a></h2>
-      <h2>
-        <a href="stfrancisdesales.html">St. Francis de Sales</a>
-      </h2>
-    </div>
-
-    <div class="contact-info">
-      <p>
-        <br />
-        Made by-<a href="https://aidantomcy.github.io"
-          >Aidan Tomcy Champannoor</a
-        ><br />
-        If you have any doubts/complaints/feedback, please mail your queries to
-        info.saintsforus@gmail.com/aidantomcy@gmail.com <br />
-        <a href="/feedback">Submit Feedback</a><br />
-        Source-<a href="https://www.wikipedia.org/">Wikipedia</a>
-      </p>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
     <script>
       $(document).bind("contextmenu", () => {
         return false;
       });
+
+      $("h2").addClass("pb-2");
+
+      if (window.innerWidth <= 1017) {
+        $("h1").addClass("pb-4");
+      }
     </script>
   </body>
 </html>
