Update links to pages

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -152,49 +152,49 @@
       </div>
       <div class="links">
         <h2>
-          <a href="stanthony.html">St. Anthony of Padua</a>
+          <a href="/stanthony">St. Anthony of Padua</a>
         </h2>
         <h2>
-          <a href="stfrancisassisi.html">St. Francis of Assisi</a>
+          <a href="/stfrancisassisi">St. Francis of Assisi</a>
         </h2>
         <h2>
-          <a href="staidanlindisfarne.html">St. Aidan of Lindisfarne</a>
+          <a href="/staidanlindisfarne">St. Aidan of Lindisfarne</a>
         </h2>
-        <h2><a href="stfrancisxavier.html">St. Francis Xavier</a></h2>
+        <h2><a href="/stfrancisxavier">St. Francis Xavier</a></h2>
         <h2>
-          <a href="blessedcarloacutis.html">Blessed Carlo Acutis</a>
+          <a href="/blessedcarloacutis">Blessed Carlo Acutis</a>
         </h2>
-        <h2><a href="stagnes.html">St. Agnes</a></h2>
+        <h2><a href="/stagnes">St. Agnes</a></h2>
         <h2>
-          <a href="stkuriakose.html">St. Kuriakose Elias Chavara</a>
+          <a href="/stkuriakose">St. Kuriakose Elias Chavara</a>
         </h2>
-        <h2><a href="stjoan.html">St. Joan of Arc</a></h2>
-        <h2><a href="stpeter.html">St. Peter</a></h2>
-        <h2><a href="stbernadette.html">St. Bernadette</a></h2>
+        <h2><a href="/stjoan">St. Joan of Arc</a></h2>
+        <h2><a href="/stpeter">St. Peter</a></h2>
+        <h2><a href="/stbernadette">St. Bernadette</a></h2>
         <h2>
-          <a href="stjohnbaptist.html">St. John the Baptist</a>
+          <a href="/stjohnbaptist">St. John the Baptist</a>
         </h2>
-        <h2><a href="mothermary.html">Mother Mary</a></h2>
-        <h2><a href="stjoseph.html">St. Joseph</a></h2>
-        <h2><a href="motherteresa.html">Mother Teresa</a></h2>
-        <h2><a href="stthomas.html">St. Thomas</a></h2>
-        <h2><a href="stsebastian.html">St. Sebastian</a></h2>
-        <h2><a href="stjohnpaulii.html">St. John Paul II</a></h2>
+        <h2><a href="/mothermary">Mother Mary</a></h2>
+        <h2><a href="/stjoseph">St. Joseph</a></h2>
+        <h2><a href="/motherteresa">Mother Teresa</a></h2>
+        <h2><a href="/stthomas">St. Thomas</a></h2>
+        <h2><a href="/stsebastian">St. Sebastian</a></h2>
+        <h2><a href="/stjohnpaulii">St. John Paul II</a></h2>
         <h2>
-          <a href="stclareassisi.html">St. Clare of Assisi</a>
+          <a href="/stclareassisi">St. Clare of Assisi</a>
         </h2>
-        <h2><a href="stgeorge.html">St. George</a></h2>
-        <h2><a href="stpaul.html">St. Paul</a></h2>
-        <h2><a href="stvianney.html">St. Vianney</a></h2>
-        <h2><a href="stphilipneri.html">St. Philip Neri</a></h2>
-        <h2><a href="stphilip.html">St. Philip</a></h2>
-        <h2><a href="stjohnxxiii.html">St. John XXIII</a></h2>
+        <h2><a href="/stgeorge">St. George</a></h2>
+        <h2><a href="/stpaul">St. Paul</a></h2>
+        <h2><a href="/stvianney">St. Vianney</a></h2>
+        <h2><a href="/stphilipneri">St. Philip Neri</a></h2>
+        <h2><a href="/stphilip">St. Philip</a></h2>
+        <h2><a href="/stjohnxxiii">St. John XXIII</a></h2>
         <h2>
-          <a href="sttherese.html">St. Therese of Liseux</a>
+          <a href="/sttherese">St. Therese of Liseux</a>
         </h2>
-        <h2><a href="stnicholas.html">St. Nicholas</a></h2>
+        <h2><a href="/stnicholas">St. Nicholas</a></h2>
         <h2>
-          <a href="stfrancisdesales.html">St. Francis de Sales</a>
+          <a href="/stfrancisdesales">St. Francis de Sales</a>
         </h2>
       </div>
       <div class="contact-info">
