--- a/website/templates/feedback.html
+++ b/website/templates/feedback.html
@@ -175,6 +175,23 @@
           Submit
         </button>
       </form>
+      {% with messages = get_flashed_messages(with_categories = True) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            {% if category == "error" %}
+              <div class="alert alert-danger alter-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+              </div>
+            {% else %}
+              <div class="alert alert-success alter-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+              </div>
+            {% endif %}
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
     </div>
 
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
