--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -94,7 +94,7 @@
       </span>
     </span>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
     <script>
       $(document).bind("contextmenu", () => {
         return false;
