--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -9,79 +9,88 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="404.css" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/404.css') }}"
+    />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="icon/apple-icon-57x57.png"
+      href="{{ url_for('static', filename='icon/apple-icon-57x57.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="icon/apple-icon-60x60.png"
+      href="{{ url_for('static', filename='icon/apple-icon-60x60.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="icon/apple-icon-72x72.png"
+      href="{{ url_for('static', filename='icon/apple-icon-72x72.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="icon/apple-icon-76x76.png"
+      href="{{ url_for('static', filename='icon/apple-icon-76x76.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="icon/apple-icon-114x114.png"
+      href="{{ url_for('static', filename='icon/apple-icon-114x114.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="icon/apple-icon-120x120.png"
+      href="{{ url_for('static', filename='icon/apple-icon-120x120.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="icon/apple-icon-144x144.png"
+      href="{{ url_for('static', filename='icon/apple-icon-144x144.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="/apple-icon-152x152.png"
+      href="{{ url_for('static', filename='icon/apple-icon-152x152.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="icon/apple-icon-180x180.png"
+      href="{{ url_for('static', filename='icon/apple-icon-180x180.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="icon/android-icon-192x192.png"
+      href="{{ url_for('static', filename='icon/android-icon-192x192.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="icon/favicon-32x32.png"
+      href="{{ url_for('static', filename='icon/favicon-32x32.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="icon/favicon-96x96.png"
+      href="{{ url_for('static', filename='icon/favicon-96x96.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="icon/favicon-16x16.png"
+      href="{{ url_for('static', filename='icon/favicon-16x16.png') }}"
     />
-    <link rel="manifest" href="icon/manifest.json" />
+    <link
+      rel="manifest"
+      href="{{ url_for('static', filename='icon/manifest.json') }}"
+    />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="{{ url_for('static', filename='icon/ms-icon-144x144.png') }}"
+    />
     <meta name="theme-color" content="#ffffff" />
     <title>404 | Page not Found</title>
   </head>
