--- a/website/templates/staidanlindisfarne.html
+++ b/website/templates/staidanlindisfarne.html
@@ -13,75 +13,81 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="icon/apple-icon-57x57.png"
+      href="{{ url_for('static', filename='icon/apple-icon-57x57.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="icon/apple-icon-60x60.png"
+      href="{{ url_for('static', filename='icon/apple-icon-60x60.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="icon/apple-icon-72x72.png"
+      href="{{ url_for('static', filename='icon/apple-icon-72x72.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="icon/apple-icon-76x76.png"
+      href="{{ url_for('static', filename='icon/apple-icon-76x76.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="icon/apple-icon-114x114.png"
+      href="{{ url_for('static', filename='icon/apple-icon-114x114.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="icon/apple-icon-120x120.png"
+      href="{{ url_for('static', filename='icon/apple-icon-120x120.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="icon/apple-icon-144x144.png"
+      href="{{ url_for('static', filename='icon/apple-icon-144x144.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="/apple-icon-152x152.png"
+      href="{{ url_for('static', filename='icon/apple-icon-152x152.png') }}"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="icon/apple-icon-180x180.png"
+      href="{{ url_for('static', filename='icon/apple-icon-180x180.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="icon/android-icon-192x192.png"
+      href="{{ url_for('static', filename='icon/android-icon-192x192.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="icon/favicon-32x32.png"
+      href="{{ url_for('static', filename='icon/favicon-32x32.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="icon/favicon-96x96.png"
+      href="{{ url_for('static', filename='icon/favicon-96x96.png') }}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="icon/favicon-16x16.png"
+      href="{{ url_for('static', filename='icon/favicon-16x16.png') }}"
     />
-    <link rel="manifest" href="icon/manifest.json" />
+    <link
+      rel="manifest"
+      href="{{ url_for('static', filename='icon/manifest.json') }}"
+    />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="{{ url_for('static', filename='icon/ms-icon-144x144.png') }}"
+    />
     <meta name="theme-color" content="#ffffff" />
     <style>
       /* BASIC SETUP */
@@ -283,7 +289,11 @@
       </div>
       <div class="content">
         <div class="image">
-          <img class="img" src="img/staidanlindisfarne.jpg" alt="" />
+          <img
+            class="img"
+            src="{{ url_for('static', filename='img/staidanlindisfarne.jpg') }}"
+            alt=""
+          />
         </div>
         <div class="text">
           <p>
@@ -371,35 +381,23 @@
     </div>
     <div class="bottom-links">
       <div class="prev-next">
-        <div class="btn" id="prev">
+        <a class="btn" href="/stfrancisassisi">
           <h2>Prev.</h2>
-        </div>
+        </a>
         &nbsp;&nbsp;&nbsp;
-        <div class="btn" id="next">
+        <a class="btn" href="/stfrancisxavier">
           <h2>Next</h2>
-        </div>
+        </a>
       </div>
-      <div class="btn" id="back">
+      <a class="btn" href="/">
         <h2>Back to Home Page</h2>
-      </div>
+      </a>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
     <script>
       $(document).bind("contextmenu", () => {
         return false;
-      });
-
-      $("#prev").on("click", () => {
-        location.replace("stfrancisassisi.html");
-      });
-
-      $("#next").on("click", () => {
-        location.replace("stfrancisxavier.html");
-      });
-
-      $("#back").on("click", () => {
-        location.replace("index.html");
       });
     </script>
   </body>
