Add period after St in title

--- a/website/templates/stfrancisassisi.html
+++ b/website/templates/stfrancisassisi.html
@@ -186,7 +186,7 @@
   </style>
 {% endblock %}
 
-{% block title %}St Francis of Assisi{% endblock %}
+{% block title %}St. Francis of Assisi{% endblock %}
 
 {% block content %}
   <div class="container">
