--- a/website/templates/blessedcarloacutis.html
+++ b/website/templates/blessedcarloacutis.html
@@ -1,4 +1,6 @@
-{% extends "saint.html" %} {% block css %}
+{% extends "saint.html" %}
+
+{% block css %}
 <style>
   /* BASIC SETUP */
   *,
@@ -186,8 +188,11 @@
     }
   }
 </style>
-{% endblock %} {% block title %}Blessed Carlo Acutis{% endblock %} {% block
-content %}
+{% endblock %}
+
+{% block title %}Blessed Carlo Acutis{% endblock %}
+
+{% block content %}
 <div class="container">
   <div class="header">
     <div class="text">
