--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -179,7 +179,7 @@
         <h2><a href="/motherteresa">Mother Teresa</a></h2>
         <h2><a href="/stthomas">St. Thomas</a></h2>
         <h2><a href="/stsebastian">St. Sebastian</a></h2>
-        <h2><a href="/stjohnpaulii">St. John Paul II</a></h2>
+        <h2><a href="/stjohnpaulii">Pope St. John Paul II</a></h2>
         <h2>
           <a href="/stclareassisi">St. Clare of Assisi</a>
         </h2>
@@ -188,7 +188,7 @@
         <h2><a href="/stvianney">St. Vianney</a></h2>
         <h2><a href="/stphilipneri">St. Philip Neri</a></h2>
         <h2><a href="/stphilip">St. Philip</a></h2>
-        <h2><a href="/stjohnxxiii">St. John XXIII</a></h2>
+        <h2><a href="/stjohnxxiii">Pope St. John XXIII</a></h2>
         <h2>
           <a href="/sttherese">St. Therese of Liseux</a>
         </h2>
