--- a/website/static/css/404.css
+++ b/website/static/css/404.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap");
+
 :root {
   --bg-color: #b0e0e6;
   --typewriterSpeed: 6s;
@@ -6,7 +8,7 @@
 
 body {
   margin: 0;
-  font-family: "Fira code", sans-serif;
+  font-family: "jetbrains mono", sans-serif;
   min-height: 100vh;
   display: grid;
   place-content: center;
@@ -18,7 +20,7 @@ body {
 h1 {
   font-size: clamp(1rem, 3vw + 1rem, 4rem);
   position: relative;
-  font-family: "fira code", monospace;
+  font-family: "jetbrains mono", monospace;
   position: relative;
   width: max-content;
 }
@@ -36,14 +38,14 @@ h1::after {
 h1::before {
   background: var(--bg-color);
   animation: typewriter var(--typewriterSpeed)
-    steps(var(--typewriterCharacters)) 1s forwards;
+    steps(var(--typewriterCharacters)) 0.5s forwards;
 }
 
 h1::after {
   width: 0.125em;
   background: black;
   animation: typewriter var(--typewriterSpeed)
-      steps(var(--typewriterCharacters)) 1s forwards,
+      steps(var(--typewriterCharacters)) 0.5s forwards,
     blink 750ms steps(var(--typewriterCharacters)) infinite;
 }
 
@@ -53,12 +55,48 @@ h1::after {
   font-weight: 400;
   opacity: 0;
   transform: translateY(3rem);
-  animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
+  animation: fadeInUp 1s ease calc(var(--typewriterSpeed) + 0.5s) forwards;
 }
 
-.back {
+/* .back {
   color: #56a5eb;
   cursor: pointer;
+} */
+
+/* a {
+  text-decoration: none;
+} */
+
+.btn {
+  margin-top: 30px;
+  padding: 1rem 1rem;
+  width: 250px;
+  height: 100px;
+  text-align: center;
+  border: 0.1rem solid #56a5eb;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  color: #56a5eb;
+  background-color: white;
+}
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+  transform: translateY(-0.1rem);
+  transition: transform 150ms;
+}
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+  transform: translateY(-0.1rem);
+  transition: transform 150ms;
+}
+
+a {
+  text-decoration: none;
+  color: #56a5eb;
 }
 
 @keyframes typewriter {
