--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -3,12 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/404.css') }}"
@@ -98,8 +92,8 @@
     <h1>404 | Page does not exist</h1>
     <span class="subtitle">
       <h2>The page you are looking for does not exist.</h2>
-      <span class="back" id="back">
-        <h3>Back to Home Page</h3>
+      <span class="back btn">
+        <a href="/">Back to Home Page</a>
       </span>
     </span>
 
