Add styles for previous and next links

--- a/website/templates/stagnes.html
+++ b/website/templates/stagnes.html
@@ -127,6 +127,20 @@
       transition: transform 150ms;
     }
 
+    .btn:hover {
+      cursor: pointer;
+      box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+      transform: translateY(-0.1rem);
+      transition: transform 150ms;
+    }
+
+    .prev-next {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     /* RESPONSIVENESS FOR MOBILE DEVICES */
     @media (max-width: 500px) {
       .header h1 {
