--- a/website/templates/stkuriakose.html
+++ b/website/templates/stkuriakose.html
@@ -324,11 +324,11 @@
   </div>
   <div class="bottom-links">
     <div class="prev-next">
-      <a class="btn" href="/staidanlindisfarne">
+      <a class="btn" href="/stagnes">
         <h2>Prev.</h2>
       </a>
       &nbsp;&nbsp;&nbsp;
-      <a class="btn" href="/blessedcarloacutis">
+      <a class="btn" href="/stjoan">
         <h2>Next</h2>
       </a>
     </div>
