--- a/website/templates/stjoan.html
+++ b/website/templates/stjoan.html
@@ -333,11 +333,11 @@
   </div>
   <div class="bottom-links">
     <div class="prev-next">
-      <a class="btn" href="/stanthony">
+      <a class="btn" href="/stkuriakose">
         <h2>Prev.</h2>
       </a>
       &nbsp;&nbsp;&nbsp;
-      <a class="btn" href="/staidanlindisfarne">
+      <a class="btn" href="/stpeter">
         <h2>Next</h2>
       </a>
     </div>
