--- a/website/templates/stpeter.html
+++ b/website/templates/stpeter.html
@@ -317,11 +317,11 @@
   </div>
   <div class="bottom-links">
     <div class="prev-next">
-      <a class="btn" href="/stanthony">
+      <a class="btn" href="/stjoan">
         <h2>Prev.</h2>
       </a>
       &nbsp;&nbsp;&nbsp;
-      <a class="btn" href="/staidanlindisfarne">
+      <a class="btn" href="/stbernadette">
         <h2>Next</h2>
       </a>
     </div>
