Update previous and next page links

--- a/website/templates/stsebastian.html
+++ b/website/templates/stsebastian.html
@@ -322,11 +322,11 @@
   </div>
   <div class="bottom-links">
     <div class="prev-next">
-      <a class="btn" href="/stanthony">
+      <a class="btn" href="/stthomas">
         <h2>Prev.</h2>
       </a>
       &nbsp;&nbsp;&nbsp;
-      <a class="btn" href="/staidanlindisfarne">
+      <a class="btn" href="/stjohnpaulii">
         <h2>Next</h2>
       </a>
     </div>
