Update previous and next page links

--- a/website/templates/stgeorge.html
+++ b/website/templates/stgeorge.html
@@ -313,11 +313,11 @@
   </div>
   <div class="bottom-links">
     <div class="prev-next">
-      <a class="btn" href="/stanthony">
+      <a class="btn" href="/stclareassisi">
         <h2>Prev.</h2>
       </a>
       &nbsp;&nbsp;&nbsp;
-      <a class="btn" href="/staidanlindisfarne">
+      <a class="btn" href="/stpaul">
         <h2>Next</h2>
       </a>
     </div>
