--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -218,7 +218,7 @@
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
     <script>
-      $(document).bind("contextmenu", () => {
+      $(document).on("contextmenu", () => {
         return false;
       });
 
