Add description meta tag and rename anchor tag to div Add description meta tag and rename anchor tag to div in navbar brand name

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -97,12 +97,13 @@
       content="{{ url_for('static', filename='icon/ms-icon-144x144.png') }}"
     />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="This is a website about a few saints." />
     <title>Saints for Us</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand">Saints for Us</a>
+        <div class="navbar-brand">Saints for Us</div>
         <button
           class="navbar-toggler"
           type="button"
