Set loading to lazy for images

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -144,11 +144,13 @@
           src="{{ url_for('static', filename='img/jesus-christ-home-image.jpeg') }}"
           alt=""
           class="img-1"
+          loading="lazy"
         />
         <img
           src="{{ url_for('static', filename='img/jesus-christ-home-image2.jpeg') }}"
           alt=""
           class="img-2"
+          loading="lazy"
         />
       </div>
       <div class="links">
