--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -218,18 +218,24 @@
       </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
+    <script
+      src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"
+      defer
+    ></script>
     <script>
-      $(document).on("contextmenu", () => {
-        return false;
+      const links = document.querySelectorAll("h2");
+      const title = document.querySelector("h1");
+      links.forEach((link) => {
+        link.classList.add("pb-2");
       });
 
-      $("h2").addClass("pb-2");
-
       if (window.innerWidth <= 922) {
-        $("h1").addClass("pb-4");
+        title.classList.add("pb-4");
       }
+
+      document.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
+      });
     </script>
   </body>
 </html>
