Remove jQuery script and use plain vanilla JavaScript

--- a/website/templates/saint.html
+++ b/website/templates/saint.html
@@ -95,10 +95,9 @@
   <body>
     {% block content %}{% endblock %}
 
-    <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
     <script>
-      $(document).bind("contextmenu", () => {
-        return false;
+      document.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
       });
     </script>
   </body>
