Update title in home and feedback page

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -98,7 +98,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="This is a website about a few saints." />
-    <title>Saints for Us</title>
+    <title>Saints for Us - Home</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
