--- a/website/templates/feedback.html
+++ b/website/templates/feedback.html
@@ -100,7 +100,7 @@
         font-size: 18px;
       }
     </style>
-    <title>Feedback</title>
+    <title>Saints for Us - Feedback</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
