Add Saints for Us to  title in error pages

--- a/website/templates/500.html
+++ b/website/templates/500.html
@@ -86,7 +86,7 @@
       content="{{ url_for('static', filename='icon/ms-icon-144x144.png') }}"
     />
     <meta name="theme-color" content="#ffffff" />
-    <title>500 | Internal Server Error</title>
+    <title>500 | Internal Server Error - Saints for Us</title>
   </head>
   <body>
     <h1>500 | Internal Server Error</h1>
