--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -86,7 +86,7 @@
       content="{{ url_for('static', filename='icon/ms-icon-144x144.png') }}"
     />
     <meta name="theme-color" content="#ffffff" />
-    <title>404 | Page not Found</title>
+    <title>404 | Page not Found - Saints for Us</title>
   </head>
   <body>
     <h1>404 | Page does not exist</h1>
