--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -1,107 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/error.css') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="{{ url_for('static', filename='icon/apple-icon-57x57.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="{{ url_for('static', filename='icon/apple-icon-60x60.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="{{ url_for('static', filename='icon/apple-icon-72x72.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="{{ url_for('static', filename='icon/apple-icon-76x76.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="{{ url_for('static', filename='icon/apple-icon-114x114.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="{{ url_for('static', filename='icon/apple-icon-120x120.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="{{ url_for('static', filename='icon/apple-icon-144x144.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="{{ url_for('static', filename='icon/apple-icon-152x152.png') }}"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="{{ url_for('static', filename='icon/apple-icon-180x180.png') }}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="{{ url_for('static', filename='icon/android-icon-192x192.png') }}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="{{ url_for('static', filename='icon/favicon-32x32.png') }}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="{{ url_for('static', filename='icon/favicon-96x96.png') }}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="{{ url_for('static', filename='icon/favicon-16x16.png') }}"
-    />
-    <link
-      rel="manifest"
-      href="{{ url_for('static', filename='icon/manifest.json') }}"
-    />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta
-      name="msapplication-TileImage"
-      content="{{ url_for('static', filename='icon/ms-icon-144x144.png') }}"
-    />
-    <meta name="theme-color" content="#ffffff" />
-    <title>404 | Page not Found - Saints for Us</title>
-  </head>
-  <body>
-    <h1>404 | Page does not exist</h1>
-    <span class="subtitle">
-      <h2>The page you are looking for does not exist.</h2>
-      <span class="back btn">
-        <a href="/">Back to Home Page</a>
-      </span>
-    </span>
+{% extends "error.html" %}
 
-    <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
-    <script>
-      $(document).bind("contextmenu", () => {
-        return false;
-      });
-    </script>
-  </body>
-</html>
+{% block title %}Page Not Found{% endblock %}
+
+{% block heading %}404 | Page Not Found{% endblock %}
+
+{% block message %}The page you are looking for does not exist.{% endblock %}
