--- a/website/templates/saint.html
+++ b/website/templates/saint.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/saint.css') }}"
+    />
+    <link
       rel="apple-touch-icon"
       sizes="57x57"
       href="{{ url_for('static', filename='icon/apple-icon-57x57.png') }}"
